# cmaketest

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  game.cpp  glad.c  main.cpp  make.bat  test.cpp
include/glad/: glad.h
